# deep_research

./: .env  .env.example  .gitignore  DEEP_RESEARCH_AGENT_PLAN.md  DEEP_RESEARCH_ARCHITECTURE_ANALYSIS.md  DESIGN.md  README.md  V8_COMPLETE_PIPELINE_GUIDE.md  V8_DETAILED_FLOW.md  V8_PIPELINE_DOCUMENTATION.md  deep_research.py  langgraph.json  pyproject.toml  requirements.txt  research.py  results.json  test_v9.py
.cache_v7/pages/: 04a206ac6593789e.json  04a206ac6593789e.txt  2edd47e67f9758ff.json  2edd47e67f9758ff.txt  3439ce7a0d1525b4.json  3439ce7a0d1525b4.txt  399cf6369bd3204c.json  399cf6369bd3204c.txt  4f860f603b5ac951.json  4f860f603b5ac951.txt  5e5d200722471cf7.json  5e5d200722471cf7.txt  751495849f8244d4.json  751495849f8244d4.txt  850540c6d5ff685f.json  850540c6d5ff685f.txt  8c87a35b6428c8f2.json  8c87a35b6428c8f2.txt  dab30e10f7a8e622.json  dab30e10f7a8e622.txt
.langgraph_api/: .langgraph_ops.pckl
docs/: generate_diagrams.py
docs/archive/: V9_ARCHITECTURE.md  V9_DETAILED_ARCHITECTURE.md
src/: __init__.py  cli.py  research_v1.py  research_v10.py  research_v2.py  research_v3.py  research_v4.py  research_v5.py  research_v6.py  research_v7.py  research_v8.py  research_v9.py  run.py  run_advanced.py  run_advanced_trust_engine.py  smoke.py
src/advanced/: __init__.py  config.py  graph.py  state.py
src/agents/: __init__.py  deep_researcher.py  multi_agent_researcher.py  researcher.py
src/core/: claims_and_cite.py  config.py  graph.py  graph_deep.py  (+2 more)
tests/: conftest.py  eval_cases.py  run_eval.py  test_behavioral.py  test_llm_judge.py  test_structural.py
(+67 files in other folders)
